# customer-service-plugin

./: .gitignore  pyproject.toml
src/customer_service_plugin/: main.py
src/dingtalk/: __init__.py  oauth.py  read_sheet.py  utils.py  write_sheet.py
